--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    def kotlin_version = "1.3.72"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
