--- a/lifecycle-plugin/src/main/resources/META-INF/gradle-plugins/com.gavin.gradle.properties
+++ b/lifecycle-plugin/src/main/resources/META-INF/gradle-plugins/com.gavin.gradle.properties
@@ -1,1 +1,1 @@
-implementation-class=com.gavin.plugin.lifecycle.LifecyclePlugin
+implementation-class=com.gavin.plugin.lifecycle.SettingManagerPlugin
