--- a/lifecycle-plugin/build.gradle
+++ b/lifecycle-plugin/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     compile localGroovy()
 
     compile 'com.android.tools.build:gradle:3.1.3'
+
+    compile 'net.lingala.zip4j:zip4j:1.3.2'
 }
 
 
