--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
@@ -25,5 +27,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     api "com.gavin.service.annotations:service-anno:0.0.1"
+
+    kapt project(":service-compiler")
 
 }
