--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'com.android.application'
 //下的properties文件名称
 apply plugin: 'com.gavin.gradle'
 
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -41,6 +44,8 @@ dependencies {
 
     aaImplementation project(":project-mode")
     implementation project(":service")
+
+    kapt project(":service-compiler")
 }
 
 for (pro in rootProject.getAllprojects()) {
