--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     
+    ext {
+        kotlin_version = '1.3.72'
+    }
     repositories {
         google()
         jcenter()
@@ -10,10 +13,14 @@ buildscript {
         maven {
             url uri('./service-anno/my-plugin')
         }
+        maven {
+            url uri('./service-compiler/my-plugin')
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
         classpath 'com.gavin.plugin:lifecycle-plugin:0.0.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
