--- a/service-anno/build.gradle
+++ b/service-anno/build.gradle
@@ -1,27 +1,6 @@
-apply plugin: 'com.android.library'
 apply plugin: 'maven'
-
-android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
-
-    defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-}
+apply plugin: 'java-library'
+apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -44,3 +23,5 @@ uploadArchives {
         }
     }
 }
+sourceCompatibility = "1.7"
+targetCompatibility = "1.7"
