--- a/build.gradle
+++ b/build.gradle
@@ -5,17 +5,11 @@ buildscript {
         kotlin_version = '1.3.72'
     }
     repositories {
+        maven {
+            url uri("/Users/zhangxiaolong/maven")
+        }
         google()
         jcenter()
-        maven {
-            url uri('./lifecycle-plugin/my-plugin')
-        }
-        maven {
-            url uri('./service-anno/my-plugin')
-        }
-        maven {
-            url uri('./service-compiler/my-plugin')
-        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
@@ -27,12 +21,10 @@ buildscript {
     }
 }
 
-def rootProjectDir = rootProject.projectDir.absolutePath
-
 allprojects {
     repositories {
         maven {
-            url uri("${rootProjectDir}/service-anno/my-plugin")
+            url uri("/Users/zhangxiaolong/maven")
         }
         google()
         jcenter()
