--- a/service-anno/build.gradle
+++ b/service-anno/build.gradle
@@ -14,12 +14,7 @@ version='0.0.1'
 uploadArchives {
     repositories {
         mavenDeployer {
-            //提交到远程服务器：
-            // repository(url: "http://www.xxx.com/repos") {
-            //    authentication(userName: "admin", password: "admin")
-            // }
-            //本地的Maven地址:当前工程下
-            repository(url: uri('./my-plugin'))
+            repository(url: uri("/Users/zhangxiaolong/maven"))
         }
     }
 }
