--- a/service-compiler/build.gradle
+++ b/service-compiler/build.gradle
@@ -15,15 +15,14 @@ dependencies {
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
 
+//group和version在后面使用自定义插件的时候会用到
+group='com.gavin.service.compiler'
+version='0.0.1'
+
 uploadArchives {
     repositories {
         mavenDeployer {
-            //提交到远程服务器：
-            // repository(url: "http://www.xxx.com/repos") {
-            //    authentication(userName: "admin", password: "admin")
-            // }
-            //本地的Maven地址:当前工程下
-            repository(url: uri('./my-plugin'))
+            repository(url: uri("/Users/zhangxiaolong/maven"))
         }
     }
 }
