--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,4 @@ include ':service-compiler'
 include ':service-anno'
 include ':project-mode'
 include ':service'
-include ':app', ':lifecycle-plugin'
+include ':app', ':service-plugin'
