--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 //com.hc.gradle为resources/META-INF/gradle-plugins
 //下的properties文件名称
-apply plugin: 'com.gavin.gradle'
+apply plugin: 'com.example.service'
 
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
