--- a/service-plugin/build.gradle
+++ b/service-plugin/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     implementation 'com.android.tools.build:gradle:3.1.3'
 
     implementation 'net.lingala.zip4j:zip4j:1.3.2'
+
+    implementation "org.json:json:20190722"
 }
 
 
